--- a/food.html
+++ b/food.html
@@ -11,9 +11,7 @@
         margin: 10px;
       }
     </style>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./Assets/skeleton.css">
     <link rel="stylesheet" href="../src/skeleton.css">
     <link rel="stylesheet" href="./Assets/foodStyle.css">
@@ -66,110 +64,9 @@
       <!-- Movies will Get Dumped Here -->
       <div id="food-view"></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script>
     </body>
-
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script type="text/javascript">
-        // Initial array of food
-        var food = [];
-
-        // displayMovieInfo function re-renders the HTML to display the appropriate content
-        function displayFoodInfo() {
-          var newFood = $("#food-input").val().trim();
-          var queryURL =
-            "https://www.themealdb.com/api/json/v1/1/search.php?s=" + newFood;
-          console.log("queryURL:", queryURL);
-
-          // Creating an AJAX call for the specific movie button being clicked
-          $.ajax({
-            url: queryURL,
-            method: "GET",
-          }).then(function (response) {
-            console.log("response:", response);
-
-            // Creating a div to hold the movie
-            var foodDiv = $("<div class='food'>");
-
-            // Storing the rating data
-            var country = response.meals[0].strArea;
-            var video = response.meals[0].strYoutube;
-            var image = response.meals[0].strMealThumb;
-            var imagePic = $("<img>").attr("src", image);
-            imagePic.addClass("foodPic");
-            console.log("image:", image);
-
-            // Creating an element to have the rating displayed
-            var pOne = $("<p>").text("Meal Origin: " + country);
-            var pTwo = $("<p>").text("Meal Video: ");
-            var aTag = $("<a>").attr("href", video).text("Recipe Video");
-            pTwo.append(aTag);
-            var pThree = $("<p>").text();
-
-            var link = $("<a>");
-            link.attr("href", video); //set href
-            link.innerHTML = video; //set text to be seen
-            pTwo.append(link); //add to body
-
-            // Displaying the rating
-            foodDiv.append(pOne);
-            foodDiv.append(pTwo);
-            foodDiv.append(pThree);
-            foodDiv.append(imagePic);
-            $("#food-view").prepend(foodDiv);
-          });
-        }
-
-        function randomFood() {
-          var queryURL = "https://www.themealdb.com/api/json/v1/1/random.php";
-          console.log("queryURL:", queryURL);
-
-          // Creating an AJAX call for the specific movie button being clicked
-          $.ajax({
-            url: queryURL,
-            method: "GET",
-          }).then(function (response) {
-            console.log("response:", response);
-            var category = response.meals[0].strCategory;
-            var rpOne = $("<p>").text("Meal Category: " + category);
-
-            // Creating a div to hold the movie
-            var randomFoodDiv = $("<div class='randomFood'>");
-            randomFoodDiv.append(rpOne);
-            $("#food-view").prepend(randomFoodDiv);
-          });
-        }
-
-        function clearFood() {
-          $("#food-view").empty();
-        }
-
-        // This function handles events where a movie button is clicked
-
-        $("#add-food").on("click", function (event) {
-          event.preventDefault();
-          displayFoodInfo();
-          $("#food-input").val("");
-          // This line grabs the input from the textbox
-        });
-        $("#random-food").on("click", function (event) {
-          event.preventDefault();
-          randomFood();
-          // This line grabs the input from the textbox
-        });
-
-        $("#clearfood").on("click", function (event) {
-          event.preventDefault();
-          clearFood();
-          // This line grabs the input from the textbox
-
-          // navbar addition 
-
-  $(document).ready(function(){
-    $('.sidenav').sidenav();
-  });
-        
-        });
-      </script>
-    </div>
-  </body>
 </html>
