--- a/food.html
+++ b/food.html
@@ -13,7 +13,7 @@
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="./Assets/skeleton.css">
-    <link rel="stylesheet" href="../src/skeleton.css">
+    <link rel="stylesheet" href="./Assets/skeleton.css">
     <link rel="stylesheet" href="./Assets/foodStyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Assets/materialize.css">
