Working food.js file with search, random, and clear functions, displays variety of info

--- a/food.html
+++ b/food.html
@@ -50,8 +50,8 @@
       <!-- Rendered Buttons will get Dumped Here  -->
       <div id="buttons-view"></div>
 
-      <form id="movie-form">
-        <label for="movie-input">Search for a Food</label>
+      <form id="food-form">
+        <label for="food-input">Search for a Food</label>
         <input type="text" id="food-input" placeholder="Enter Food Here" />
         <br />
 
@@ -67,6 +67,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="food.js"></script>
     </body>
 </html>
