functional drinks page

--- a/drinks.html
+++ b/drinks.html
@@ -23,7 +23,7 @@
     <div id="page-wrap">
     <nav>
     <div class="nav-wrapper">
-      <a href="food.html" class="brand-logo">Logo</a>
+      <a href="drinks.html" class="brand-logo">Logo</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="aboutUs.html">About Us</a></li>
@@ -49,25 +49,24 @@
       <!-- Rendered Buttons will get Dumped Here  -->
       <div id="buttons-view"></div>
 
-      <form id="movie-form">
-        <label for="movie-input">Search for a Drink</label>
-        <input type="text" id="food-input" placeholder="Enter Food Here" />
+      <form id="drink-form">
+        <label for="drink-input">Search for a Drink</label>
+        <input type="text" id="drinks-input" placeholder="Enter Drink Here" />
         <br />
 
-        <!-- Button triggers new movie to be added -->
-        <a href="food.html" class="btn btn-outline-success" role="button" aria-pressed="true">🡄 Back</a> 
-        <input class='button' id="add-food" type="submit" value="Get info" />
-        <button class='button' id="random-food">Random Food</button>
-        <button  class='button'id="clear-food">Clear Food</button>
+        <!-- Button triggers new drink to be added -->
+        <a href="drinks.html" class="btn btn-outline-success" role="button" aria-pressed="true">🡄 Back</a> 
+        <input class='button' id="add-drinks" type="submit" value="Get info" />
+        <button class='button' id="random-drinks">Random drinks</button>
+        <button  class='button'id="clear-drinks">Clear drinks</button>
         <a href="index.html" class="btn btn-outline-success" role="button" aria-pressed="true">Next 🡆</a> 
       </form>
 
-      <!-- Movies will Get Dumped Here -->
-      <div id="food-view"></div>
+      <div id="drinks-view"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="drinks.js"></script>
     </body>
 </html>
