--- a/food.html
+++ b/food.html
@@ -44,7 +44,7 @@
                 
       <h1>Food Search 🍽</h1>
       <div class="container">
-        "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim 
+        Type in any food item to see information or click Random Food 
       </div>
 
       <!-- Rendered Buttons will get Dumped Here  -->
