fixed back button in drinks html

--- a/drinks.html
+++ b/drinks.html
@@ -55,7 +55,7 @@
         <br />
 
         <!-- Button triggers new drink to be added -->
-        <a href="drinks.html" class="btn btn-outline-success" role="button" aria-pressed="true">🡄 Back</a> 
+        <a href="food.html" class="btn btn-outline-success" role="button" aria-pressed="true">🡄 Back</a> 
         <input class='button' id="add-drinks" type="submit" value="Get info" />
         <button class='button' id="random-drinks">Random drinks</button>
         <button  class='button'id="clear-drinks">Clear drinks</button>
