added fonts to all pages and made big

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       href="./src/assests/main.ico"
       type="image/x-icon"
     />
+    <link
+  href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap"
+  rel="stylesheet"
+  />
     <title>The Eating Hour</title>
 </head>
 <body class="parallax">
